Fix spacing and revert a small mistake

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -109,7 +109,7 @@ img.vertical {
   float: right;
   font-size: 16px;
   height: 25px;
-  margin: 4px 0px;
+  margin: 4px 2px;
   width: 75px;
 }
 
